# parkinson-ai

./: .gitignore  CHANGELOG.md  README.md  RESULTS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/reference/: biomarker_reference_ranges.json  gba1_variants.json  gwas_134_loci.json  hpo_parkinson_terms.json  kegg_hsa05012.json  nsd_iss_criteria.json  pd_genes_monogenic.json  synneuge_criteria.json
parkinson_ai/: __init__.py  config.py
parkinson_ai/agents/: __init__.py  base.py  biomarker_interpreter.py  common.py  drug_analyst.py  genetic_counselor.py  imaging_analyst.py  kg_explorer.py  literature_agent.py  risk_assessor.py  router.py  sentinel.py  staging_agent.py
parkinson_ai/api/: __init__.py  app.py  websocket.py
parkinson_ai/biomarkers/: __init__.py
parkinson_ai/core/: __init__.py  embedding.py  llm_client.py  utils.py  vector_store.py
parkinson_ai/data/: __init__.py  amp_pd.py  base_client.py  chembl.py  clinicaltrials.py  disgenet.py  mpower.py  open_targets.py  physionet.py  ppmi.py  pubmed.py  reactome.py  string_db.py  uci.py  uniprot.py
parkinson_ai/knowledge_graph/: __init__.py  biomarker_nodes.py  builder.py  clinical_layer.py  exporters.py  genetic_layer.py  imaging_layer.py  importers.py  queries.py  schema.py  staging.py  statistics.py
parkinson_ai/ml/: __init__.py  evaluation.py  explainability.py  federated.py  training.py
parkinson_ai/orchestration/: __init__.py  decomposer.py  prompts.py  state.py  workflow.py
parkinson_ai/rag/: __init__.py  citation_tracker.py  kg_context.py  pubmed_indexer.py  reranker.py  retriever.py
parkinson_ai/viz/: __init__.py  biomarker_plots.py  kg_renderer.py  prediction_dashboard.py  shap_plots.py  staging_viz.py
scripts/: build_pd_graph.py  demo.py  evaluate_staging.py  index_pubmed.py  setup_ollama.sh  train_models.py
tests/: __init__.py  conftest.py
tests/api/: test_app.py
web/: index.html
(+95 files in other folders)
