[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parkinson-ai"
version = "0.1.0"
description = "Comprehensive PD prediction platform with 100+ biomarkers, PD knowledge graph, multimodal ML, PubMed RAG, and local multi-agent LLM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "torch-geometric>=2.5",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "networkx>=3.2",
    "pydantic>=2.0",
    "pydantic-settings",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "langgraph>=0.2",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyvis>=0.3",
    "shap>=0.44",
    "lifelines>=0.29",
    "tenacity>=8.0",
    "rich>=13.0",
    "biopython>=1.83",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["parkinson_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 240

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = false
exclude = ["^web/"]

[[tool.mypy.overrides]]
module = [
    "Bio.*",
    "chromadb",
    "fastapi.*",
    "langgraph.*",
    "matplotlib.*",
    "networkx.*",
    "pandas.*",
    "pyvis.*",
    "rank_bm25",
    "scipy.*",
    "seaborn.*",
    "sentence_transformers.*",
    "shap",
    "sklearn.*",
    "torch.*",
    "torch_geometric.*",
    "uvicorn",
    "xgboost",
]
ignore_missing_imports = true
